# sui-playground

./: .gitignore  .todo  README.md
apps/: Cargo.toml  README.md
apps/src/: counter.rs  main.rs
cli/: README.md
scaffoldings/: README.md  TEMPLATE.md  access_control_w_owned_object.md  access_control_w_shared_object.md  assertions.md  assertions.move  create_coin.move  create_object_id.md  create_object_id.move  create_vector_of_len.md  create_vector_of_len.move  erc20_coin.md  get_caller.md  get_caller.move  get_immutable_reference.md  get_mutable_reference.md  get_object_details.move  get_timestamp.md  get_timestamp.move  getter_function.md  tests.md  tests_destroy_instead_of_return.md  tests_scenario_vs_dummy.md  tests_take_multiple_objects.md
sdk-rust/: README.md  get_object_id.md  imports.md
troubleshooting/: e07005_invalid_transfer_of_refs.md
tuts/car/: Move.toml  README.md
tuts/car/sources/: car.move  car_admin.move  car_shop.move
tuts/car/tests/: car_admin_tests.move  car_shop_tests.move  car_tests.move
tuts/coin_details/: Move.toml
tuts/coin_details/sources/: coin_details.move
tuts/counter/: Move.toml
tuts/counter/sources/: counter.move  counter_admin.move
tuts/counter/tests/: counter_admin_tests.move  counter_tests.move
tuts/forge/: Move.toml
tuts/forge/sources/: forge.move
tuts/hello/: Move.toml
tuts/hello/sources/: hello.move  (+1 more)
tuts/my_coin/: Move.toml  README.md
tuts/orderbook/: README.md
tuts/sui_collections/: Move.toml
tuts/sui_conditionals/: Move.toml
tuts/sui_data_types/: Move.toml
tuts/sui_utils/: Move.toml
(+16 files in other folders)
